# rust-usd

./: CMakeLists.txt  Cargo.toml  README.md
src/: lib.rs  wabi.cpp  wabi.h
